Version 1.0.1
    * Fix Python 2.5 compatibility

Version 1.0 (2010-06-29)
    * First public release
